* javapackager module * package builder for linux uses direct "java" call to invoke javapackager * let's try using Travis for building